# openhort

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  continue_codex.sh  mockup-ui-rebuild.html  pyproject.toml  run.py
deploy/linux/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: access-server.md  containers.md  extensions.md  llmings.md  mkdocs.yml  plugins.md  ux-guidelines.md
docs/ai/: coding-guidelines.md
docs/coding/: docs-writing-guide.md  extensions.md  memory-safety.md  peer2peer.md  plugins.md  screen-capture.md  ux-guidelines.md
docs/manual/: index.md
experiments/local_proxy/: app.py  cookie_fixes.patch  server.py
hort/: __init__.py  agent.py  app.py  auth.py  browser_isolation.py  cert.py  cli.py  config.py  controller.py  hort_config.py  input.py  media.py  media_browser_cam.py  media_camera.py  media_screen.py  models.py  network.py  paths.py  plugins.py  screen.py  session.py  spaces.py  stream.py  targets.py  termd.py  termd_client.py  terminal.py  thumbnailer.py  tmux.py  windows.py
hort/access/: Dockerfile  __init__.py  auth.py  docker-compose.yml  entrypoint.sh  server.py  store.py  tokens.py  tunnel_client.py
hort/commands/: __init__.py  _registry.py  cam.py  card_api.py  config.py  connectors.py  credentials.py  debug.py  llmings.py  settings.py  sources.py  wire.py
hort/containers/: __init__.py  base.py  docker.py  registry.py
hort/credentials/: __init__.py  api.py  health.py  manager.py  oauth.py  types.py  vault.py
hort/envoy/: __init__.py  client.py  protocol.py  server.py
hort/ext/: __init__.py  blobstore.py  chat_backend.py  claude_auth.py  connectors.py  credentials.py  documents.py  file_store.py  intents.py  manifest.py  mcp.py  plugin.py  registry.py  scheduler.py  skills.py  store.py  types.py  vue_loader.py
hort/extensions/: __init__.py
hort/hortmap/: __init__.py  models.py  routes.py  store.py
hort/lifecycle/: __init__.py  ipc_protocol.py  llming_process.py  manager.py  runner.py  worker.py
hort/llm/: __init__.py  api_provider.py  base.py  cli_provider.py  history.py
hort/llming/: __init__.py  base.py  bus.py  decorators.py  handles.py  llm_executor.py  models.py  powers.py  pulse.py  registry.py  stream_bus.py
hort/mcp/: __init__.py  __main__.py  bridge.py  proxy_bridge.py  server.py
hort/peer2peer/: __init__.py  admission.py  dc_proxy.py  device_tokens.py  models.py  proto.py  punch.py  relay_listener.py  relay_poller.py  signal.py  stun.py  tunnel.py  video_track.py  webm_stream.py  webrtc.py
hort/sandbox/: Dockerfile  __init__.py  mcp.py  mcp_proxy.py  peer_broker.py  peer_orchestrator.py  reaper.py  seccomp.json  session.py
hort/signals/: __init__.py  (+5 more)
ideas/: chat-backend-streaming.md  circuit-branching-and-transforms.md  circuit-error-handling.md  circuit-execution-visibility.md  connector-ecosystem.md  credentials-store.md  hook-system.md  model-provider-plugins.md  multi-monitor-support.md  skill-registry.md  standalone-skills.md
llmings/: __init__.py
scripts/: deploy-access.sh  deploy-viewer.conf.example  deploy-viewer.sh  generate-glbs.py  p2p_qr_demo.py
subprojects/macos_statusbar/: CONCEPT.md  README.md  build.sh  pyproject.toml
subprojects/macos_statusbar/Sources/: PowerManager.swift  ServerBridge.swift  SharedKey.swift  StatusBarController.swift  main.swift
subprojects/macos_statusbar/docs/: architecture.md  icon-and-states.md  menu-structure.md  plugin-contributions.md  remote-viewing-safety.md  server-api.md  system-controls.md
subprojects/macos_statusbar/hort_statusbar/: __init__.py  __main__.py  app.py  autostart.py  icons.py  menubar.py  overlay.py  permissions.py  power.py  server_bridge.py
subprojects/macos_statusbar/tests/: test_autostart.py  test_power.py  test_server_bridge.py
tests/: conftest.py  test_access_llming_integration.py  test_app.py  test_browser_isolation.py  test_cert.py  test_chat_backend.py  test_claude_detect.py  test_connectors.py  test_containers.py  test_controller.py  test_credentials.py  test_envoy.py  test_ext.py  test_extension_mcp.py  test_file_store.py  test_hortmap.py  test_input.py  test_integration.py  test_isolation.py  test_lifecycle.py  test_llm_executor.py  test_llm_history.py  test_llming_base.py  test_llming_wire.py  test_macos_statusbar_plugin.py  test_mixins.py  test_models.py  test_network.py  test_p2p_playwright.py  test_p2p_video_playwright.py  test_peer2peer_admission.py  test_peer2peer_device_tokens.py  test_peer2peer_models.py  test_peer2peer_proto.py  test_peer2peer_punch.py  test_peer2peer_signal.py  test_peer2peer_stun.py  test_peer2peer_tunnel.py  test_peer2peer_video.py  test_plugin_base.py  (+29 more)
tools/: audit_card_sandbox.py  build_demo_bundle.py  detect_card_needs.py
(+526 files in other folders)
